Removed rest of code from previous mode of operation, began adding code to run arpspoof, iptables and proxy support.